# information_system_design_project

./: .env.example  README.md  main.py  pyproject.toml  settings.py
grpc_core/: service.proto
grpc_core/clients/: country.py
grpc_core/protos/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
grpc_core/servers/schemas/: country.py
information_system_design/: calculate.py  rest.py  routes.py  schemas.py  usecase.py
mock_server/: __init__.py  mock_server.py  raw_data.py
tests/: conftest.py  test_grpc.py  test_rest_api.py
tools/: setup.sh
