[tool.poetry]
name = "information-system-design"
version = "0.1.0"
description = ""
authors = ["MiniDan21 <molchanov_danilka00@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
grpcio = "^1.41.1"
black = "^24.10.0"
grpcio-tools = "^1.68.1"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
